adding a backbutton and changing some html stuff because of it

--- a/src/format.html
+++ b/src/format.html
@@ -23,38 +23,6 @@
       </div>
    </div>
    <main>
-      <div class="search-wrapper active">
-         <div class="search-for-animename">
-            <input type="text" class="search-for-animename-input" placeholder="nach Anime suchen...">
-        </div>
-        <div class="search-for-animename-results">
-            <ul>
-               <li>Hunter x Hunter</li>
-               <li>Black Clover</li>
-               <li>Assassination Classroom</li>
-               <li>KonoSuba</li>
-            </ul>
-        </div>
-      </div>
-      <div class="staffeln-auswahl">
-         <ul>
-            <li><strong>Staffeln:</strong></li>
-            <li><a season="0" link="https://anicloud.io/anime/stream/hunter-x-hunter/filme">Filme</a></li>
-            <li><a season="1" link="https://anicloud.io/anime/stream/hunter-x-hunter/staffel-1">1</a></li>
-            <li><a season="2" link="https://anicloud.io/anime/stream/hunter-x-hunter/staffel-2">2</a></li>
-            <li><a season="3" link="https://anicloud.io/anime/stream/hunter-x-hunter/staffel-3">3</a></li>
-         </ul>
-      </div>
-      <div class="episoden-auswahl">
-         <ul episodeSeason="1">
-            <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-1'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
-            <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-2'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
-            <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-3'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
-            <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-4'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
-            <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-5'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
-         </ul>
-      </div>
-      <button class="go-to-format">Weiter</button>
       <div class="file-format-wrapper">
          <ul>
             <li class="dropdown-format dropdown-included"><p>Beinhaltete Begriffe</p>
@@ -78,18 +46,12 @@
             <button class="continue-format">Weiter</button>
          </ul>
       </div>
-      <div class="download-episodes-div">
-         <ul>
-            <li>Ep. 1 St. 1 Hunter x Hunter Departure x And x Friends</li>
-         </ul>
-      </div>
-      <button class="download-episodes">Episoden herrunterladen</button>
    </main>
    <button class="ui-btn goback">
       <p>Zurück</p>
    </button>
    <script src="js/customTileBarFunction.js"></script>
    <script src="js/animedata.js"></script>
-   <script src="js/renderer.js"></script>
+   <script src="js/format.js"></script>
   </body>
 </html>
