adding select all episodes of season button and doing a bit of redesign and of and some fixes and and a bit of change for making a format

--- a/src/anime.html
+++ b/src/anime.html
@@ -39,9 +39,9 @@
             <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-3'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
             <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-4'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
             <li episodeLink='https://anicloud.io/stream/hunter-x-hunter/staffel-1/episode-5'><label class="checkbox"><input type="checkbox"><span class="checkmark"></span></label><span>Folge 1</span><strong>Departure x And x Friends</strong></li>
+            <!-- <button class="go-to-format">Weiter</button> -->
          </ul>
       </div>
-      <button class="go-to-format">Weiter</button>
    </main>
    <button class="ui-btn goback">
       <p>Zurück</p>
