adding Toradora to search.html, exactly how it should be

--- a/src/search.html
+++ b/src/search.html
@@ -29,6 +29,7 @@
         </div>
         <div class="search-for-animename-results">
             <ul>
+               <li>Toradora</li>
                <li>Hunter x Hunter</li>
                <li>Black Clover</li>
                <li>Assassination Classroom</li>
